--- a/main.css
+++ b/main.css
@@ -1,1 +1,122 @@
+body {
+  margin: 0 100px;
+  font-family: sans-serif;
+}
 
+.navigation-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  margin: 10px 0;
+  border-radius: 50%;
+}
+
+.navigation-bar-links ul {
+  display: flex;
+  list-style: none;
+}
+
+.navigation-bar-links ul li {
+  margin: 10px 20px;
+}
+
+/* my intro page  */
+
+#biography {
+  display: flex;
+  justify-content: space-between;
+}
+
+.biography-intro-text {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.biography-intro-text p:first-child {
+  font-size: 30px;
+  color: black;
+}
+
+.biography-intro-text h1 {
+  font-size: 60px;
+  margin: 0;
+}
+
+.biography-intro-text p {
+  font-size: 20px;
+  margin: 10px 0px;
+}
+
+.biography-banner {
+  width: 50%;
+}
+
+.biography-banner img {
+  width: 550px;
+  height: 550px;
+}
+
+/* skills section  */
+
+#skills {
+  display: flex;
+  flex-direction: column;
+}
+
+.skills-subtitle {
+  font-size: 25px;
+}
+
+.skills-item img {
+  width: 60px;
+  height: 60px;
+  border-radius: 60%;
+}
+
+.skills-item-and-text {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* projects section  */
+
+#my-projects {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects-subtitle {
+  font-size: 25px;
+}
+
+.project {
+  display: flex;
+  justify-content: center;
+}
+
+.project-thumbnail img {
+  width: 400px;
+  height: 200px;
+}
+
+.project-description {
+  width: 500px;
+}
+
+/* my experience  */
+
+.experience-item {
+  display: flex;
+}
+
+.experience-company-logo img {
+  width: 100px;
+  height: 100px;
+}
