--- a/main.css
+++ b/main.css
@@ -112,11 +112,37 @@ body {
 
 /* my experience  */
 
+.experience-subtitle {
+  font-size: 25px;
+}
+
 .experience-item {
   display: flex;
 }
 
 .experience-company-logo img {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 80px;
+}
+
+.experience-company-info h3 {
+  font-size: 20px;
+  margin: 0 30px;
+}
+
+.experience-company-info p {
+  margin: 10px 30px;
+  color: grey;
+}
+
+.experience-company-info p {
+}
+
+/* footer  */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
 }
