--- a/main.css
+++ b/main.css
@@ -72,17 +72,26 @@ body {
 
 .skills-subtitle {
   font-size: 25px;
+  text-align: center;
+  margin: 20px 0;
+  text-transform: uppercase;
 }
 
 .skills-item img {
   width: 60px;
   height: 60px;
+  margin: 5px 25px;
   border-radius: 60%;
+}
+
+.skills-item p {
+  margin: 0;
+  text-align: center;
 }
 
 .skills-item-and-text {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 /* projects section  */
@@ -93,7 +102,9 @@ body {
 }
 
 .projects-subtitle {
+  margin: 20px 0px;
   font-size: 25px;
+  text-transform: uppercase;
 }
 
 .project {
@@ -113,7 +124,9 @@ body {
 /* my experience  */
 
 .experience-subtitle {
+  margin: 50px 0px;
   font-size: 25px;
+  text-transform: uppercase;
 }
 
 .experience-item {
@@ -132,10 +145,9 @@ body {
 
 .experience-company-info p {
   margin: 10px 30px;
-  color: grey;
-}
-
-.experience-company-info p {
+  width: 20%;
+  font-size: 15px;
+  color: rgb(52, 50, 50);
 }
 
 /* footer  */
