--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
 
 .navigation-bar-links ul li a {
   text-decoration: none;
-  color: #505a7e;
+  color: #0d1d56;
   font-weight: bold;
   text-transform: uppercase;
   margin: 10px 20px;
@@ -124,7 +124,7 @@ body {
 }
 
 .biography-banner img {
-  width: 600px;
+  width: 690px;
   height: 600px;
 }
 
