--- a/main.css
+++ b/main.css
@@ -6,15 +6,8 @@ body {
 .navigation-bar {
   margin: 30px 120px;
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   padding: 20px 0px;
-}
-
-.avatar {
-  width: 100px;
-  height: 100px;
-  margin: 10px 0px;
-  border-radius: 50%;
 }
 
 .navigation-bar-links ul {
@@ -75,7 +68,7 @@ body {
 #biography {
   display: flex;
   justify-content: space-between;
-  margin: 30px 120px;
+  margin: 120px 120px;
 }
 
 .biography-intro-text {
@@ -119,13 +112,8 @@ body {
   background: rgb(78, 240, 189);
 }
 
-.biography-banner {
-  width: 50%;
-}
-
 .biography-banner img {
-  width: 690px;
-  height: 600px;
+  width: 700px;
 }
 
 /* skills section  */
@@ -139,7 +127,7 @@ body {
 .skills-subtitle {
   display: flex;
   width: 50%;
-  margin: 0px 80px;
+  margin: 0px 120px;
   flex-direction: column;
   justify-content: center;
 }
@@ -170,6 +158,7 @@ body {
 
 .item p {
   margin: 0;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -182,6 +171,18 @@ body {
 }
 
 /* projects section  */
+
+#my-projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 30px 120px;
+}
+
+.projects-wrapper {
+  display: flex;
+  justify-content: center;
+}
 
 .projects-section {
   display: flex;
@@ -197,19 +198,40 @@ body {
   width: 260px;
 }
 
-#my-projects {
-  display: flex;
-  margin: 30px 120px;
-}
-
 .project {
   display: flex;
   flex-direction: column;
+  width: 30%;
+  margin-right: 20px;
 }
 
 .project-thumbnail img {
   width: 500px;
   height: 500px;
+}
+
+.project-description {
+  font-size: 20px;
+  line-height: 1.444;
+}
+
+.project-buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.project-buttons a {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(148, 101, 209);
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 20px;
+}
+
+.project-buttons a:first-child {
+  background-color: aquamarine;
+  color: black;
 }
 
 /* my experience  */
@@ -242,13 +264,21 @@ body {
   margin: 0 30px;
 }
 
-.experience-company-info p {
-  margin: 10px 30px;
-  width: 20%;
-  font-size: 15px;
+.experience-company-info span {
+  margin: 5px 30px;
+  width: 40%;
+  font-size: 20px;
   color: rgb(52, 50, 50);
 }
 
+.experience-company-info p {
+  font-size: 20px;
+  margin: 5px 30px;
+}
+
+.experience-company-info .fa-solid {
+  color: #2d2ad0;
+}
 /* footer  */
 
 footer {
@@ -256,7 +286,7 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 50px;
-  background-color: #cacaccc2;
+  background-color: #e0e0e284;
 }
 
 .fa-envelope-circle-check {
