--- a/main.css
+++ b/main.css
@@ -167,7 +167,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   padding: 100px;
-  background-color: rgb(245 124 255 / 26%);
+  background-image: linear-gradient(260deg, #f8def8 0%, #f49cfc 100%);
 }
 
 /* projects section  */
@@ -229,16 +229,23 @@ body {
   border-radius: 20px;
 }
 
+.project-buttons a:hover {
+  background-color: rgb(118, 104, 246);
+}
+
 .project-buttons a:first-child {
   background-color: aquamarine;
   color: black;
+}
+
+.project-buttons a:first-child:hover {
+  background-color: aqua;
 }
 
 /* my experience  */
 
 #experience {
   margin: 30px 120px;
-  padding: 50px;
 }
 
 .experience-subtitle h2 {
@@ -252,32 +259,37 @@ body {
 
 .experience-item {
   display: flex;
+  width: 60%;
 }
 
 .experience-company-logo img {
-  width: 70px;
-  height: 80px;
+  width: 60px;
+}
+.experience-company-info {
+  margin-left: 30px;
+  font-size: 20px;
 }
 
 .experience-company-info h3 {
-  font-size: 20px;
-  margin: 0 30px;
+  margin: 0px 0px 20px 0px;
 }
 
-.experience-company-info span {
-  margin: 5px 30px;
-  width: 40%;
-  font-size: 20px;
-  color: rgb(52, 50, 50);
+.company-name a {
+  color: black;
+  text-decoration: none;
 }
 
 .experience-company-info p {
-  font-size: 20px;
-  margin: 5px 30px;
+  line-height: 1.444;
+  color: rgb(85, 85, 85);
 }
 
 .experience-company-info .fa-solid {
-  color: #2d2ad0;
+  color: #8820b5;
+}
+
+.company-location {
+  margin-right: 20px;
 }
 /* footer  */
 
