--- a/main.css
+++ b/main.css
@@ -1,7 +1,14 @@
+html,
 body {
+  min-height: 100%;
+  min-width: fit-content;
+  /* overflow-x: hidden; */
   font-family: sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+/* -------> Navigation <-------- */
 
 .navigation-bar {
   margin: 30px 120px;
@@ -31,14 +38,9 @@ body {
 }
 
 .navigation-bar-links .contact-buttom {
-  text-decoration: none;
   background-color: #505a7e;
   padding: 10px 15px;
   border-radius: 80px;
-  color: white;
-}
-
-.contact-buttom {
   text-decoration: none !important;
   color: white !important;
   transition: all 0.5s;
@@ -59,11 +61,12 @@ body {
 .fa-linkedin {
   color: rgb(49 181 182);
 }
+
 .fa-brands {
   font-size: 40px;
 }
 
-/* my intro page  */
+/* -------> Intro section <-------- */
 
 #biography {
   display: flex;
@@ -112,13 +115,18 @@ body {
   background: rgb(78, 240, 189);
 }
 
-.biography-banner img {
-  width: 700px;
+.biography-banner {
+  width: 60%;
 }
 
-/* skills section  */
+.biography-banner img {
+  width: 600px;
+}
+
+/* -------> Skills section <-------- */
 
 #skills {
+  width: 100%;
   display: flex;
   flex-direction: row-reverse;
 }
@@ -162,14 +170,15 @@ body {
 }
 
 .skills-items {
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 100px;
+  padding: 50px;
   background-image: linear-gradient(260deg, #f8def8 0%, #f49cfc 100%);
 }
 
-/* projects section  */
+/* -------> My Projects section <-------- */
 
 #my-projects {
   display: flex;
@@ -183,7 +192,7 @@ body {
   justify-content: center;
 }
 
-.projects-section {
+.projects-subtitle {
   display: flex;
   justify-content: center;
 }
@@ -200,12 +209,11 @@ body {
 .project {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 33.33%;
   margin-right: 20px;
 }
 
 .project-thumbnail img {
-  width: 500px;
   height: 500px;
 }
 
@@ -241,7 +249,7 @@ body {
   background-color: rgb(133, 245, 245);
 }
 
-/* my experience  */
+/* -------> My Experience section <-------- */
 
 #experience {
   margin: 200px 120px;
@@ -264,6 +272,7 @@ body {
 .experience-company-logo img {
   width: 60px;
 }
+
 .experience-company-info {
   margin-left: 30px;
   font-size: 20px;
@@ -290,7 +299,8 @@ body {
 .company-location {
   margin-right: 20px;
 }
-/* footer  */
+
+/* -------> Footer <-------- */
 
 footer {
   display: flex;
@@ -322,22 +332,27 @@ footer {
   font-size: 30px;
 }
 
-@media all and (min-width: 300px) and (max-width: 1440px) {
-  body {
-    margin: 10px;
-  }
+/* -------> Media queries <-------- */
 
-  .navigation-bar {
-    justify-content: flex-start;
-  }
+/* 
+  phones phones max with 767px
+  tablets and large phones min with 768px
+ */
 
-  .navigation-bar .contact-buttom {
-    display: none;
+@media all and (max-width: 1100px) {
+  .navigation-bar .navigation-bar-links ul {
+    flex-wrap: wrap;
   }
 
   #biography {
-    flex-direction: column-reverse;
+    flex-direction: column;
+    align-content: center;
     margin: 100px;
+    text-align: center;
+  }
+
+  .biography-banner {
+    width: 100%;
   }
 
   .biography-banner img {
@@ -346,17 +361,55 @@ footer {
   }
 
   .biography-intro-text {
+    width: 100%;
   }
 
-  .biography-intro-text p {
-    display: none;
+  .biography-intro-text span,
+  .biography-intro-text .dowloand-cv {
+    margin: 0 auto;
   }
 
   #skills {
     flex-direction: column;
   }
+  .skills-subtitle h2 {
+    justify-content: center;
+  }
+
+  #my-projects {
+    margin: 100px 0px;
+    flex-direction: column;
+  }
+
+  .projects-wrapper {
+    flex-direction: column;
+  }
+
+  .project {
+    width: 100%;
+  }
+
+  .skills-subtitle {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .skills-subtitle h2 {
+    margin: 0 auto;
+  }
 
   .skills-items {
-    justify-content: center;
+    width: 100%;
+  }
+
+  .skills-items .item {
+    width: 90px;
+    text-align: center;
+  }
+
+  .item img {
+    margin: 0;
   }
 }
