--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 html,
 body {
-  /* min-height: 100%; */
+  min-height: 100%;
   min-width: fit-content;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   font-family: sans-serif;
   margin: 0;
   padding: 0;
