--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 body {
   font-family: sans-serif;
+  min-height: 100%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  overflow-x: hidden;
 }
 
 .navigation-bar {
@@ -40,19 +45,17 @@ body {
   background-color: #121d45;
 }
 
-.fa-brands {
-  font-size: 40px;
-}
-
 .fa-envelope {
   margin-right: 10px;
 }
 
 .fa-github {
+  font-size: 40px;
   color: rgb(245, 124, 255);
 }
 
 .fa-linkedin {
+  font-size: 40px;
   color: rgb(49, 181, 182);
 }
 
@@ -119,7 +122,8 @@ body {
 }
 #skills .skills-subtitle h2 {
   font-size: 30px;
-  color: #505a7e;
+  text-transform: uppercase;
+  color: #0d1d56;
   border-color: #fbdd03;
   border-bottom-style: solid;
   width: 230px;
@@ -163,12 +167,13 @@ body {
   justify-content: center;
 }
 #my-projects .projects-subtitle h2 {
-  margin: 20px 120px;
-  color: #0d1d56;
-  font-size: 35px;
+  font-size: 30px;
   text-transform: uppercase;
-  border-bottom: 4px solid #fbdd03;
-  width: 260px;
+  color: #0d1d56;
+  border-color: #fbdd03;
+  border-bottom-style: solid;
+  width: 230px;
+  border-bottom-width: 4px;
 }
 #my-projects .projects-wrapper {
   display: flex;
@@ -214,12 +219,13 @@ body {
   margin: 200px 120px;
 }
 #experience .experience-subtitle h2 {
-  color: #0d1d56;
-  margin: 50px 0px;
-  font-size: 35px;
+  font-size: 30px;
   text-transform: uppercase;
-  border-bottom: 4px solid #fbdd03;
-  width: 300px;
+  color: #0d1d56;
+  border-color: #fbdd03;
+  border-bottom-style: solid;
+  width: 230px;
+  border-bottom-width: 4px;
 }
 #experience .experience-item {
   display: flex;
@@ -264,13 +270,121 @@ footer .footer-contact .fa-linkedin {
   margin: 0 30px;
 }
 footer .footer-contact .fa-envelope-circle-check {
-  color: rgb(118, 104, 246);
   font-size: 40px;
+  color: rgb(118, 104, 246);
 }
 footer .footer-contact .fa-earth-americas {
+  font-size: 40px;
   color: #54cbfa;
-  font-size: 30px;
 }
 footer .footer-contact .fa-comment-dots {
+  font-size: 40px;
   color: #717070;
+}
+
+/* -------> Media queries <-------- */
+/* 
+  phones phones max with 767px
+  tablets and large phones min with 768px
+ */
+@media all and (max-width: 1100px) {
+  * p,
+span,
+h3 {
+    font-size: 30px;
+  }
+  .navigation-bar {
+    margin: 20px;
+    justify-content: center;
+  }
+  .navigation-bar .navigation-bar-links {
+    margin: 20px;
+    justify-content: center;
+  }
+  .navigation-bar .navigation-bar-links ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .navigation-bar .navigation-bar-links ul li a {
+    font-size: 25px;
+    margin: 20px;
+    display: inline-block;
+  }
+  #biography {
+    flex-direction: column;
+    align-content: center;
+    margin: 100px;
+    text-align: center;
+  }
+  #biography .biography-intro-text {
+    width: 100%;
+  }
+  #biography .biography-intro-text span {
+    margin: 0 auto;
+  }
+  #biography .biography-intro-text h1 {
+    margin: 20px 0;
+  }
+  #biography .biography-intro-text .dowloand-cv {
+    margin: 0 auto;
+    margin-top: 20px;
+    font-size: 25px;
+    padding: 18px;
+    color: black;
+  }
+  #biography .biography-banner {
+    width: 100%;
+    margin-top: 50px;
+  }
+  #biography .biography-banner img {
+    width: 500px;
+  }
+  #skills {
+    flex-direction: column;
+  }
+  #skills .skills-subtitle {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+  }
+  #skills .skills-subtitle h2 {
+    justify-content: center;
+  }
+  #skills .skills-items {
+    width: 100%;
+    padding: 0;
+  }
+  #skills .skills-items .tem {
+    width: 155px;
+    text-align: center;
+  }
+  #skills .skills-items .tem img {
+    margin: 0;
+  }
+  #my-projects {
+    margin: 100px 0px;
+    flex-direction: column;
+  }
+  #my-projects .projects-wrapper {
+    flex-direction: column;
+  }
+  #my-projects .projects-wrapper .project {
+    width: 100%;
+  }
+  #my-projects .projects-wrapper .project .project-thumbnail img {
+    width: 100%;
+  }
+  #experience {
+    margin: 100px 20px;
+  }
+  #experience .experience-subtitle h2 {
+    margin: 30px auto;
+  }
+  #experience .experience-item {
+    width: 100%;
+  }
+}
+.footer-contact {
+  flex-wrap: wrap;
 }/*# sourceMappingURL=main.css.map */
