--- a/main.scss
+++ b/main.scss
@@ -1,12 +1,15 @@
-// variables
-$subtitlecolor: #0d1d56;
+// var
+$size: 40px;
+
 // mixin
-@mixin faBrandsSize($color) {
-  font-size: 40px;
+@mixin faBrandsSize($size, $color) {
+  font-size: $size;
+  color: $color;
 }
 
 @mixin subtitleSection {
   font-size: 30px;
+  text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
   border-bottom-style: solid;
@@ -16,6 +19,9 @@ $subtitlecolor: #0d1d56;
 
 body {
   font-family: sans-serif;
+  min-height: 100%;
+  min-width: fit-content;
+  overflow-x: hidden;
 }
 
 .navigation-bar {
@@ -58,19 +64,16 @@ body {
   }
 }
 
-.fa-brands {
-  @include faBrandsSize;
-}
 .fa-envelope {
   margin-right: 10px;
 }
 
 .fa-github {
-  color: rgb(245 124 255);
+  @include faBrandsSize($size, rgb(245 124 255));
 }
 
 .fa-linkedin {
-  color: rgb(49 181 182);
+  @include faBrandsSize($size, rgb(49 181 182));
 }
 
 // intro seccion
@@ -135,12 +138,7 @@ body {
     flex-direction: column;
     justify-content: center;
     h2 {
-      font-size: 30px;
-      color: red;
-      border-color: red;
-      //   border-bottom-style: solid;
-      //   width: 230px;
-      //   border-bottom-width: 4px;
+      @include subtitleSection;
     }
     p {
       font-size: 20px;
@@ -182,7 +180,7 @@ body {
     display: flex;
     justify-content: center;
     h2 {
-      @include subtitleSection();
+      @include subtitleSection;
     }
   }
   .projects-wrapper {
@@ -233,7 +231,7 @@ body {
   margin: 200px 120px;
   .experience-subtitle {
     h2 {
-      @include subtitleSection();
+      @include subtitleSection;
     }
   }
   .experience-item {
@@ -286,17 +284,134 @@ footer {
       margin: 0 30px;
     }
     .fa-envelope-circle-check {
-      color: rgb(118, 104, 246);
-      font-size: 40px;
+      @include faBrandsSize($size, rgb(118, 104, 246));
     }
-
     .fa-earth-americas {
-      color: #54cbfa;
-      font-size: 30px;
+      @include faBrandsSize($size, #54cbfa);
     }
-
     .fa-comment-dots {
-      color: #717070;
+      @include faBrandsSize($size, #717070);
     }
   }
+}
+
+/* -------> Media queries <-------- */
+
+/* 
+  phones phones max with 767px
+  tablets and large phones min with 768px
+ */
+
+@media all and (max-width: 1100px) {
+  * p,
+  span,
+  h3 {
+    font-size: 30px;
+  }
+
+  .navigation-bar {
+    margin: 20px;
+    justify-content: center;
+    .navigation-bar-links {
+      margin: 20px;
+      justify-content: center;
+      ul {
+        flex-wrap: wrap;
+        justify-content: center;
+        li {
+          a {
+            font-size: 25px;
+            margin: 20px;
+            display: inline-block;
+          }
+        }
+      }
+    }
+  }
+
+  #biography {
+    flex-direction: column;
+    align-content: center;
+    margin: 100px;
+    text-align: center;
+    .biography-intro-text {
+      width: 100%;
+      span {
+        margin: 0 auto;
+      }
+      h1 {
+        margin: 20px 0;
+      }
+      .dowloand-cv {
+        margin: 0 auto;
+        margin-top: 20px;
+        font-size: 25px;
+        padding: 18px;
+        color: black;
+      }
+    }
+    .biography-banner {
+      width: 100%;
+      margin-top: 50px;
+      img {
+        width: 500px;
+      }
+    }
+  }
+
+  #skills {
+    flex-direction: column;
+    .skills-subtitle {
+      width: 100%;
+      margin: 0;
+      text-align: center;
+      padding: 10px;
+      h2 {
+        justify-content: center;
+      }
+    }
+    .skills-items {
+      width: 100%;
+      padding: 0;
+      .tem {
+        width: 155px;
+        text-align: center;
+        img {
+          margin: 0;
+        }
+      }
+    }
+  }
+
+  #my-projects {
+    margin: 100px 0px;
+    flex-direction: column;
+    .projects-wrapper {
+      flex-direction: column;
+      .project {
+        width: 100%;
+        .project-thumbnail {
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  #experience {
+    margin: 100px 20px;
+    .experience-subtitle {
+      h2 {
+        margin: 30px auto;
+      }
+    }
+    .experience-item {
+      width: 100%;
+    }
+  }
+}
+
+.footer-contact {
+  flex-wrap: wrap;
 }
