--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,14 @@
 // var
 $size: 40px;
-
+$witheColor: white;
+$blackColor: black;
+$capitalColor: #0d1d56;
+$defaultColor: #505a7e;
+$decorColor: #fbdd03;
+$buttonColor: #7794ff;
+$buttonHover: #93aafc;
+$purpleColor: #8820b5;
+$greenColor: rgb(49 181 182);
 // mixin
 @mixin faBrandsSize($size, $color) {
   font-size: $size;
@@ -10,8 +18,8 @@ $size: 40px;
 @mixin subtitleSection {
   font-size: 30px;
   text-transform: uppercase;
-  color: #0d1d56;
-  border-color: #fbdd03;
+  color: $capitalColor;
+  border-color: $decorColor;
   border-bottom-style: solid;
   width: 230px;
   border-bottom-width: 4px;
@@ -29,6 +37,7 @@ body {
   display: flex;
   justify-content: end;
   padding: 20px 0px;
+
   ul {
     display: flex;
     align-items: center;
@@ -37,7 +46,7 @@ body {
     li {
       a {
         text-decoration: none;
-        color: #0d1d56;
+        color: $capitalColor;
         font-weight: bold;
         text-transform: uppercase;
         margin: 10px 20px;
@@ -49,31 +58,29 @@ body {
       &:nth-child(4) {
         text-decoration: none;
       }
+      .fa-github {
+        @include faBrandsSize($size, $purpleColor);
+      }
+
+      .fa-linkedin {
+        @include faBrandsSize($size, $greenColor);
+      }
     }
   }
 }
 
 .contact-buttom {
-  background-color: #505a7e;
+  background-color: $buttonColor;
   padding: 10px 15px;
   border-radius: 80px;
-  color: white !important;
+  color: $witheColor !important;
   transition: all 0.5s;
   &:hover {
-    background-color: #121d45;
+    background-color: $buttonHover;
   }
-}
-
-.fa-envelope {
-  margin-right: 10px;
-}
-
-.fa-github {
-  @include faBrandsSize($size, rgb(245 124 255));
-}
-
-.fa-linkedin {
-  @include faBrandsSize($size, rgb(49 181 182));
+  .fa-envelope {
+    margin-right: 10px;
+  }
 }
 
 // intro seccion
@@ -90,8 +97,8 @@ body {
   }
   span {
     font-size: 30px;
-    color: #505a7e;
-    border-color: #fbdd03;
+    color: $defaultColor;
+    border-color: $decorColor;
     border-bottom-style: solid;
     width: 230px;
     border-bottom-width: 4px;
@@ -104,19 +111,20 @@ body {
   p {
     font-size: 20px;
     margin: 10px 0px;
-    color: #505a7e;
+    color: $defaultColor;
     line-height: 1.444;
   }
   .dowloand-cv {
     text-decoration: none;
     text-align: center;
+    color: $witheColor;
     padding: 10px;
     width: 180px;
     border-radius: 30px;
-    background: aquamarine;
+    background: $buttonColor;
     cursor: pointer;
     &:hover {
-      background: rgb(78, 240, 189);
+      background: $buttonHover;
     }
   }
   .biography-banner {
@@ -143,6 +151,7 @@ body {
     p {
       font-size: 20px;
       line-height: 1.444;
+      color: $defaultColor;
     }
   }
   .skills-items {
@@ -164,6 +173,7 @@ body {
         margin: 0;
         font-size: 20px;
         text-align: center;
+        color: $defaultColor;
       }
     }
   }
@@ -200,6 +210,12 @@ body {
     .project-description {
       font-size: 20px;
       line-height: 1.444;
+      h3 {
+        color: $capitalColor;
+      }
+      p {
+        color: $defaultColor;
+      }
     }
   }
   .project-buttons {
@@ -207,17 +223,17 @@ body {
     justify-content: space-evenly;
     a {
       text-decoration: none;
-      color: white;
+      color: $witheColor;
       background-color: rgb(183, 136, 245);
       padding: 10px;
-      border: 1px solid black;
+      border: 1px solid $blackColor;
       border-radius: 20px;
       &:hover {
         background-color: rgb(146, 135, 250);
       }
       &:first-child {
         background-color: rgb(153, 236, 240);
-        color: black;
+        color: $defaultColor;
         &:first-child:hover {
           background-color: rgb(112, 249, 249);
         }
@@ -246,23 +262,32 @@ body {
   .experience-company-info {
     margin-left: 30px;
     font-size: 20px;
+    .company-details {
+      .company-location {
+        margin-right: 20px;
+      }
+      .company-name {
+        a {
+          color: $defaultColor;
+          text-decoration: none;
+        }
+      }
+    }
     h3 {
       margin: 0px 0px 20px 0px;
+      color: $capitalColor;
+    }
+    span {
+      color: $defaultColor;
+    }
+    a {
+      color: $defaultColor;
+    }
+    p {
+      color: $defaultColor;
     }
     .fa-solid {
-      color: #8820b5;
-    }
-  }
-}
-
-.company-details {
-  .company-location {
-    margin-right: 20px;
-  }
-  .company-name {
-    a {
-      color: black;
-      text-decoration: none;
+      color: $purpleColor;
     }
   }
 }
@@ -390,9 +415,20 @@ footer {
       flex-direction: column;
       .project {
         width: 100%;
+        margin: 50px 0px;
         .project-thumbnail {
           img {
             width: 100%;
+          }
+        }
+        .project-description {
+          text-align: center;
+        }
+        .project-buttons {
+          a {
+            font-size: 25px;
+            padding: 25px 35px;
+            border-radius: 40px;
           }
         }
       }
