--- a/main.css
+++ b/main.css
@@ -189,7 +189,7 @@ body {
 }
 #my-projects .projects-wrapper .project:hover {
   transition: 1s;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 #my-projects .projects-wrapper .project .project-thumbnail img {
   width: 100%;
@@ -244,7 +244,7 @@ body {
 }
 #experience .experience-item {
   display: flex;
-  width: 60%;
+  width: 50%;
 }
 #experience .experience-company-logo img {
   width: 60px;
@@ -253,6 +253,16 @@ body {
   margin-left: 30px;
   font-size: 20px;
 }
+#experience .experience-company-info h3 {
+  margin: 0px 0px 20px 0px;
+  color: #0d1d56;
+}
+#experience .experience-company-info .company-details span {
+  color: #505a7e;
+}
+#experience .experience-company-info .company-details p {
+  color: #505a7e;
+}
 #experience .experience-company-info .company-details .company-location {
   margin-right: 20px;
 }
@@ -260,21 +270,8 @@ body {
   color: #505a7e;
   text-decoration: none;
 }
-#experience .experience-company-info h3 {
-  margin: 0px 0px 20px 0px;
-  color: #0d1d56;
-}
-#experience .experience-company-info span {
-  color: #505a7e;
-}
-#experience .experience-company-info a {
-  color: #505a7e;
-}
-#experience .experience-company-info p {
-  color: #505a7e;
-}
-#experience .experience-company-info .fa-solid {
-  color: #8820b5;
+#experience .experience-company-info .company-details .fa-solid {
+  color: rgb(49, 181, 182);
 }
 
 footer {
