--- a/main.css
+++ b/main.css
@@ -123,9 +123,9 @@ body {
   text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
-  width: 200px;
   border-bottom-style: solid;
   border-bottom-width: 5px;
+  width: 160px;
 }
 #skills .skills-subtitle p {
   font-size: 20px;
@@ -170,7 +170,6 @@ body {
   text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
-  width: 200px;
   border-bottom-style: solid;
   border-bottom-width: 5px;
 }
@@ -188,8 +187,8 @@ body {
   margin-right: 20px;
 }
 #my-projects .projects-wrapper .project:hover {
-  transition: 1s;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  transition: 2s;
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.2), 0 13px 26px 0 rgba(0, 0, 0, 0.19);
 }
 #my-projects .projects-wrapper .project .project-thumbnail img {
   width: 100%;
@@ -239,9 +238,9 @@ body {
   text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
-  width: 200px;
   border-bottom-style: solid;
   border-bottom-width: 5px;
+  width: 247px;
 }
 #experience .experience-item {
   display: flex;
@@ -289,7 +288,6 @@ body {
   text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
-  width: 200px;
   border-bottom-style: solid;
   border-bottom-width: 5px;
   text-align: end;
@@ -317,6 +315,9 @@ body {
 #education .education-colbach .education-info p {
   color: #505a7e;
   font-size: 20px;
+  width: 80%;
+  text-align: end;
+  line-height: 1.444;
 }
 #education .education-img img {
   width: 80px;
@@ -333,7 +334,6 @@ body {
   text-transform: uppercase;
   color: #0d1d56;
   border-color: #fbdd03;
-  width: 200px;
   border-bottom-style: solid;
   border-bottom-width: 5px;
 }
@@ -345,13 +345,26 @@ body {
   margin-inline: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
+#certificate .certificate-wrap .certificate-item:hover {
+  box-shadow: 0 13px 15px 0 rgba(0, 0, 0, 0.2), 0 10px 24px 0 rgba(0, 0, 0, 0.1);
+  transition: 2s;
+}
 #certificate .certificate-wrap .certificate-item .certificate-html img,
 #certificate .certificate-wrap .certificate-item .certificate-css img {
   width: 300px;
 }
-#certificate .certificate-wrap .certificate-item .certificate-html h3,
-#certificate .certificate-wrap .certificate-item .certificate-css h3 {
+#certificate .certificate-wrap .certificate-item .certificate-html a,
+#certificate .certificate-wrap .certificate-item .certificate-css a {
+  margin-block: 20px;
+  display: block;
+  text-decoration: none;
+  color: #505a7e;
   text-align: center;
+  font-size: 20px;
+}
+#certificate .certificate-wrap .certificate-item .certificate-html a:hover,
+#certificate .certificate-wrap .certificate-item .certificate-css a:hover {
+  text-decoration: underline;
 }
 
 footer {
