--- a/main.scss
+++ b/main.scss
@@ -146,6 +146,7 @@ body {
     justify-content: center;
     h2 {
       @include subtitleSection;
+      width: 160px;
     }
     p {
       font-size: 20px;
@@ -205,9 +206,9 @@ body {
       padding: 10px;
       margin-right: 20px;
       &:hover {
-        transition: 1s;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3),
-          0 6px 20px 0 rgba(0, 0, 0, 0.2);
+        transition: 2s;
+        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.2),
+          0 13px 26px 0 rgba(0, 0, 0, 0.19);
       }
       .project-thumbnail {
         img {
@@ -261,6 +262,7 @@ body {
   .experience-subtitle {
     h2 {
       @include subtitleSection;
+      width: 247px;
     }
   }
   .experience-item {
@@ -340,6 +342,9 @@ body {
       p {
         color: $defaultColor;
         font-size: 20px;
+        width: 80%;
+        text-align: end;
+        line-height: 1.444;
       }
     }
   }
@@ -368,13 +373,26 @@ body {
       margin-inline: 30px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.1);
+      &:hover {
+        box-shadow: 0 13px 15px 0 rgba(0, 0, 0, 0.2),
+          0 10px 24px 0 rgba(0, 0, 0, 0.1);
+        transition: 2s;
+      }
       .certificate-html,
       .certificate-css {
         img {
           width: 300px;
         }
-        h3 {
+        a {
+          margin-block: 20px;
+          display: block;
+          text-decoration: none;
+          color: $defaultColor;
           text-align: center;
+          font-size: 20px;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
